[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "yt_lessons",
    "book/guessing_game",
    "book/common_programming_concepts",
    "book/ownership",
    "book/structs"
]

[dependencies]
